[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/BoxPressurePlate.tscn" type="PackedScene" id=1]
[ext_resource path="res://UIcomponents/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Crate.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/PressurePlate.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Level6.gd" type="Script" id=7]
[ext_resource path="res://Assets/SlidingGlassDoor.tscn" type="PackedScene" id=8]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=8]
extents = Vector3( 2.05249, 2.82671, 1.42729 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("World/RotatingSection:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("World/RotatingSection2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "RotateSection2Active"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("World/RotatingSection2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( -4.92458, -4.92458 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "RotateSection2Disable"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("World/RotatingSection2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( -4.59479, -4.59479 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "RotateSectionActive"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("World/RotatingSection:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( -4.59479, -4.59479 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "RotateSectionDisable"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("World/RotatingSection:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( -4.59479, -4.59479 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="Level6" type="Node"]
script = ExtResource( 7 )

[node name="World" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="World"]
transform = Transform( 0.536688, -0.674551, -0.506899, 0.824175, 0.290332, 0.486254, -0.180834, -0.67874, 0.711766, 59.4377, 10.3655, 48.3971 )
light_color = Color( 0.368627, 0.298039, 0.658824, 1 )
light_energy = 4.303
shadow_enabled = true
shadow_color = Color( 0.298039, 0.247059, 0.34902, 1 )

[node name="DirectionalLight2" type="DirectionalLight" parent="World"]
transform = Transform( 0.705439, 6.09687e-07, 0.708771, -0.644631, 0.415693, 0.6416, -0.294631, -0.909505, 0.293247, 44.9233, 0, 51.1372 )
light_color = Color( 0.560784, 0.188235, 0.772549, 1 )
light_energy = 1.294

[node name="Ground" type="StaticBody" parent="World"]
transform = Transform( 12, 0, 0, 0, 32, 0, 0, 0, 28, 0.00143051, -31, 12.143 )

[node name="MeshInstance" type="MeshInstance" parent="World/Ground"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/Ground"]
shape = SubResource( 2 )

[node name="RotatingSection" type="Spatial" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -31, -50 )

[node name="Ground2" type="KinematicBody" parent="World/RotatingSection"]
transform = Transform( 32, 0, 0, 0, 32, 0, 0, 0, 10, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="World/RotatingSection/Ground2"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/RotatingSection/Ground2"]
shape = SubResource( 2 )

[node name="RotatingSection2" type="Spatial" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -31, -116 )

[node name="Ground2" type="KinematicBody" parent="World/RotatingSection2"]
transform = Transform( 32, 0, 0, 0, 32, 0, 0, 0, 10, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="World/RotatingSection2/Ground2"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/RotatingSection2/Ground2"]
shape = SubResource( 2 )

[node name="Pillar" type="StaticBody" parent="World"]
transform = Transform( 12, 0, 0, 0, 32, 0, 0, 0, 12, -47, -31, -50 )

[node name="MeshInstance" type="MeshInstance" parent="World/Pillar"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/Pillar"]
shape = SubResource( 2 )

[node name="Pillar2" type="StaticBody" parent="World"]
transform = Transform( 12, 0, 0, 0, 32, 0, 0, 0, 12, 47, -31, -50 )

[node name="MeshInstance" type="MeshInstance" parent="World/Pillar2"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/Pillar2"]
shape = SubResource( 2 )

[node name="Pillar3" type="StaticBody" parent="World"]
transform = Transform( 12, 0, 0, 0, 32, 0, 0, 0, 12, -47, -31, -116 )

[node name="MeshInstance" type="MeshInstance" parent="World/Pillar3"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/Pillar3"]
shape = SubResource( 2 )

[node name="Pillar4" type="StaticBody" parent="World"]
transform = Transform( 12, 0, 0, 0, 32, 0, 0, 0, 12, 46, -31, -116 )

[node name="MeshInstance" type="MeshInstance" parent="World/Pillar4"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/Pillar4"]
shape = SubResource( 2 )

[node name="Gate" type="Spatial" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -221 )

[node name="EndGround" type="StaticBody" parent="World/Gate"]
transform = Transform( 120.96, 0, 0, 0, 89.6, 0, 0, 0, 61.6, 0.00143051, -89, 9.14301 )

[node name="MeshInstance" type="MeshInstance" parent="World/Gate/EndGround"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/Gate/EndGround"]
shape = SubResource( 2 )

[node name="EndWall2" type="StaticBody" parent="World/Gate"]
transform = Transform( 51.6, 0, 0, 0, 66.88, 0, 0, 0, 28, 69.0014, 33, -21.857 )

[node name="MeshInstance" type="MeshInstance" parent="World/Gate/EndWall2"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/Gate/EndWall2"]
shape = SubResource( 2 )

[node name="EndWall" type="StaticBody" parent="World/Gate"]
transform = Transform( 51.6, 0, 0, 0, 66.88, 0, 0, 0, 28, -68.9986, 33, -21.857 )

[node name="MeshInstance" type="MeshInstance" parent="World/Gate/EndWall"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/Gate/EndWall"]
shape = SubResource( 2 )

[node name="EndGround2" type="StaticBody" parent="World/Gate"]
transform = Transform( 120.96, 0, 0, 0, 89.6, 0, 0, 0, 61.6, 0.00143051, -89, -112.857 )

[node name="MeshInstance" type="MeshInstance" parent="World/Gate/EndGround2"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/Gate/EndGround2"]
shape = SubResource( 2 )

[node name="FinishLight" type="OmniLight" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.1345, 38.3933, -282.832 )
light_color = Color( 1, 0.592157, 0.117647, 1 )
light_energy = 3.862
shadow_enabled = true
omni_range = 19.009

[node name="Player" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 80, 0 )

[node name="LevelLogic" type="Spatial" parent="."]

[node name="BigPressurePlate" parent="LevelLogic" instance=ExtResource( 5 )]
transform = Transform( 2.5, 0, 0, 0, 1, 0, 0, 0, 2.5, -47, 1, -50 )

[node name="BigPressurePlate2" parent="LevelLogic" instance=ExtResource( 5 )]
transform = Transform( 2.5, 0, 0, 0, 1, 0, 0, 0, 2.5, 47, 1, -50 )

[node name="BigPressurePlate3" parent="LevelLogic" instance=ExtResource( 5 )]
transform = Transform( 2.5, 0, 0, 0, 1, 0, 0, 0, 2.5, -47, 1, -116 )

[node name="BigPressurePlate4" parent="LevelLogic" instance=ExtResource( 5 )]
transform = Transform( 2.5, 0, 0, 0, 1, 0, 0, 0, 2.5, 46, 1, -116 )

[node name="SectionPlate" parent="LevelLogic" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -10 )

[node name="ExitDoor" parent="LevelLogic" instance=ExtResource( 3 )]
transform = Transform( 9.35, 0, 0, 0, 3, 0, 0, 0, 7.56, 0, 0, -234 )

[node name="ExitBoxPressurePlate" parent="LevelLogic" instance=ExtResource( 1 )]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0.635297, -195 )

[node name="Crate" parent="LevelLogic" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 1 )

[node name="SlidingGlassDoor" parent="LevelLogic" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -151 )

[node name="LevelCompleteArea" type="Area" parent="LevelLogic"]
transform = Transform( 8.16481, 0, 0, 0, 3.13414, 0, 0, 0, 0.924704, 0.0299215, 8.53306, -253.015 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="LevelLogic/LevelCompleteArea"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.5
anims/RESET = SubResource( 3 )
anims/RotateSection2Active = SubResource( 6 )
anims/RotateSection2Disable = SubResource( 7 )
anims/RotateSectionActive = SubResource( 4 )
anims/RotateSectionDisable = SubResource( 5 )

[node name="HUD" type="Node" parent="."]

[node name="PauseMenu" parent="HUD" instance=ExtResource( 2 )]

[connection signal="pressed" from="LevelLogic/BigPressurePlate" to="." method="_on_BigPressurePlate_pressed"]
[connection signal="unpressed" from="LevelLogic/BigPressurePlate" to="." method="_on_BigPressurePlate_unpressed"]
[connection signal="pressed" from="LevelLogic/BigPressurePlate2" to="." method="_on_BigPressurePlate2_pressed"]
[connection signal="unpressed" from="LevelLogic/BigPressurePlate2" to="." method="_on_BigPressurePlate2_unpressed"]
[connection signal="pressed" from="LevelLogic/BigPressurePlate3" to="." method="_on_BigPressurePlate3_pressed"]
[connection signal="pressed" from="LevelLogic/BigPressurePlate4" to="." method="_on_BigPressurePlate4_pressed"]
[connection signal="unpressed" from="LevelLogic/BigPressurePlate4" to="." method="_on_BigPressurePlate4_unpressed"]
[connection signal="pressed" from="LevelLogic/SectionPlate" to="." method="_on_SectionPlate_pressed"]
[connection signal="unpressed" from="LevelLogic/SectionPlate" to="." method="_on_SectionPlate_unpressed"]
[connection signal="pressed" from="LevelLogic/ExitBoxPressurePlate" to="." method="_on_ExitBoxPressurePlate_pressed"]
[connection signal="body_entered" from="LevelLogic/LevelCompleteArea" to="." method="_on_LevelCompleteArea_body_entered"]
